2014-09-02  François Déchelle  <francois@dechelle.net>

	* adding XML report sending to socket; in progress

2014-08-29  François Déchelle  <francois@dechelle.net>

	* adding XML report generation; in progress

	* moved status and report functions to own file

2014-08-28  François Déchelle  <francois@dechelle.net>

	* implemented and tested multi-threaded version of directory scan

	* added struct umwsu_report and detailled reporting from modules

2014-08-27  François Déchelle  <francois@dechelle.net>

	* added verbosity level in struct umwsu

	* adding report structure, added better status evaluation in case of multiple modules scanning a file

	* added UMWSU_SUSPICIOUS to enum umwsu_status, changed scan function and modules

	* added extern "C" for C++ compilation

2014-08-11  François Déchelle  <francois@dechelle.net>

	* fixed inconsistent naming

2014-08-08  François Déchelle  <francois@dechelle.net>

	* modified messages

	* added documentation

2014-08-06  François Déchelle  <francois@dechelle.net>

	* added directory scanning

	* added command-line scan tool

	* moved call to module init function out of module_new

	* changed pkg-config file to add moduledir variable

2014-08-05  François Déchelle  <francois@dechelle.net>

	* added file scan using mime type

	* added modules initialization and mime types hash table creation

2014-07-18  François Déchelle  <francois@dechelle.net>

	* adding modules loading from predefined directory

2014-07-17  François Déchelle  <francois@dechelle.net>

	* added directory traversal function

2014-07-15  François Déchelle  <francois@dechelle.net>

	* initial commit

