@@ -2,6 +2,7 @@
 #include <libumwsu/scan.h>
 #include "dir.h"
 #include "modulep.h"
+#include "umwsup.h"
 #include "statusp.h"
 
 #include <assert.h>
@@ -10,91 +11,84 @@
 #include <stdlib.h>
 #include <string.h>
 #include <stdio.h>
+#include <sys/types.h>
+#include <sys/stat.h>
 
-#define MAX_CALLBACKS 4
+struct callback_entry {
+  umwsu_scan_callback_t callback;
+  void *callback_data;
+};
 
 struct umwsu_scan {
   struct umwsu *u;
+  const char *path;
+  enum umwsu_scan_flags flags;
   GThreadPool *thread_pool;  
-  int callback_count;
-  struct {
-    umwsu_scan_callback_t callback;
-    void *callback_data;
-  } callbacks[MAX_CALLBACKS];
+  GArray *callbacks;
 };
 
-void scan_entry_thread(gpointer data, gpointer user_data);
-
-void umwsu_scan_add_callback(struct umwsu_scan *scan, umwsu_scan_callback_t callback, void *callback_data)
-{
-#if 0
-  assert(scan->callback_count < MAX_CALLBACKS);
-
-  scan->callbacks[sd->callback_count].callback = callback;
-  scan->callbacks[sd->callback_count].callback_data = callback_data;
-
-  sd->callback_count++;
-#endif
-}
+static void scan_entry_thread(gpointer data, gpointer user_data);
 
 static int get_max_threads(void)
 {
   return 8;
 }
 
-struct umwsu_scan umwsu_scan_new(struct umwsu *umwsu_handle, const char *path, enum umwsu_scan_flags flags)
+struct umwsu_scan *umwsu_scan_new(struct umwsu *umwsu_handle, const char *path, enum umwsu_scan_flags flags)
 {
-  struct umwsu_scan *sd;
+  struct umwsu_scan *scan;
 
-  sd = (struct umwsu_scan *)malloc(sizeof(struct umwsu_scan));
+  scan = (struct umwsu_scan *)malloc(sizeof(struct umwsu_scan));
 
-  sd->u = u;
-  if (flags & UMWSU_SCAN_THREADED)
-    sd->thread_pool = g_thread_pool_new(scan_entry_thread, u, get_max_threads(), FALSE, NULL);
+  scan->u = umwsu_handle;
+  scan->path = (const char *)strdup(path);
+
+  scan->flags = flags;
+
+  if (scan->flags & UMWSU_SCAN_THREADED)
+    scan->thread_pool = g_thread_pool_new(scan_entry_thread, scan, get_max_threads(), FALSE, NULL);
   else
-    sd->thread_pool = NULL;
+    scan->thread_pool = NULL;
 
-  sd->callback_count = 0;
-  
+  scan->callbacks = g_array_new(FALSE, FALSE, sizeof(struct callback_entry));
+
 #if 0
-  umwsu_scan_add_callback(sd, scan_print_callback, NULL);
-  umwsu_scan_add_callback(sd, xml_report_callback, umwsu_report_xml_new());
+  umwsu_scan_add_callback(s, scan_print_callback, NULL);
+  umwsu_scan_add_callback(s, xml_report_callback, umwsu_report_xml_new());
 #endif
 
-  return sd;
+  return scan;
 }
 
-static void umwsu_scan_call_callbacks(struct umwsu_scan *sd, struct umwsu_report *report)
+void umwsu_scan_add_callback(struct umwsu_scan *scan, umwsu_scan_callback_t callback, void *callback_data)
+{
+  struct callback_entry entry;
+
+  entry.callback = callback;
+  entry.callback_data = callback_data;
+
+  g_array_append_val(scan->callbacks, entry);
+}
+
+static void umwsu_scan_call_callbacks(struct umwsu_scan *scan, struct umwsu_report *report)
 {
   int i;
 
-  for(i = 0; i < sd->callback_count; i++) {
-    umwsu_scan_callback_t callback = sd->callbacks[i].callback;
+  for(i = 0; i < scan->callbacks->len; i++) {
+    struct callback_entry *entry = &g_array_index(scan->callbacks, struct callback_entry, i);
+    umwsu_scan_callback_t callback = entry->callback;
 
-    (*callback)(sd->u, report, sd->callbacks[i].callback_data);
+    (*callback)(report, entry->callback_data);
   }
 }
 
-void umwsu_scan_free(struct umwsu_scan *scan)
+static enum umwsu_status umwsu_scan_apply_modules(const char *path, GPtrArray *mod_array,  struct umwsu_report *report)
 {
-  if (scan->thread_pool != NULL)
-    g_thread_pool_free(scan->thread_pool, FALSE, TRUE);
-
-  free(scan);
-}
-
-
-enum umwsu_status umwsu_scan_file(struct umwsu *u, magic_t magic, const char *path)
-{
-  GPtrArray *mod_array = get_applicable_modules(u, magic, path);
   enum umwsu_status current_status = UMWSU_CLEAN;
-  struct umwsu_report report;
-
-  umwsu_report_init(&report, path);
 
   if (mod_array == NULL) {
     current_status = UMWSU_UNKNOWN_FILE_TYPE;
-    report.status = current_status;
+    report->status = current_status;
   } else {
     int i;
 
@@ -103,8 +97,10 @@ enum umwsu_status umwsu_scan_file(struct umwsu *u, magic_t magic, const char *pa
       enum umwsu_status mod_status;
       char *mod_report = NULL;
 
-      if (u->verbosity >= 2)
+#if 0
+      if (umwsu_get_verbose(u) >= 2)
 	printf("UMWSU: module %s: scanning %s\n", mod->name, path);
+#endif
 
       mod_status = (*mod->scan)(path, mod->data, &mod_report);
 
@@ -119,25 +115,33 @@ enum umwsu_status umwsu_scan_file(struct umwsu *u, magic_t magic, const char *pa
     }
   }
 
-  if (u->verbosity >= 3)
-    printf("%s: %s\n", path, umwsu_status_str(current_status));
-
-  umwsu_report_print(&report, stdout);
-
-  /* call the callbacks here */
-  /* ... */
-
-  umwsu_report_destroy(&report);
-
   return current_status;
 }
 
-/*
-  Unfortunately, libmagic is not thread-safe.
-  We create a new magic_t for each thread, and keep it 
-  in thread's private data, so that it is created only once.
- */
+static enum umwsu_status umwsu_scan_file(struct umwsu_scan *scan, magic_t magic, const char *path)
+{
+  enum umwsu_status status;
+  struct umwsu_report report;
 
+  umwsu_report_init(&report, path);
+
+  status = umwsu_scan_apply_modules(path, umwsu_get_applicable_modules(scan->u, magic, path), &report);
+
+  if (umwsu_get_verbose(scan->u) >= 3)
+    printf("%s: %s\n", path, umwsu_status_str(status));
+
+  umwsu_report_print(&report, stdout);
+
+  umwsu_scan_call_callbacks(scan, &report);
+
+  umwsu_report_destroy(&report);
+
+  return status;
+}
+
+/* Unfortunately, libmagic is not thread-safe. */
+/* We create a new magic_t for each thread, and keep it  */
+/* in thread's private data, so that it is created only once. */
 static void magic_destroy_notify(gpointer data)
 {
   magic_close((magic_t)data);
@@ -147,9 +151,7 @@ static GPrivate private_magic = G_PRIVATE_INIT(magic_destroy_notify);
 
 static magic_t get_private_magic(void)
 {
-  magic_t m;
-
-  m = (magic_t)g_private_get(&private_magic);
+  magic_t m = (magic_t)g_private_get(&private_magic);
 
   if (m == NULL) {
     m = magic_open(MAGIC_MIME_TYPE);
@@ -161,46 +163,69 @@ static magic_t get_private_magic(void)
   return m;
 }
 
-void scan_entry_thread(gpointer data, gpointer user_data)
+static void scan_entry_thread(gpointer data, gpointer user_data)
 {
-  struct umwsu *u = (struct umwsu *)user_data;
+  struct umwsu_scan *scan = (struct umwsu_scan *)user_data;
   char *path = (char *)data;
 
-  umwsu_scan_file(u, get_private_magic(), path);
+  umwsu_scan_file(scan, get_private_magic(), path);
 
   free(path);
 }
 
 static void scan_entry_threaded(const char *full_path, const struct dirent *dir_entry, void *data)
 {
-  struct umwsu_scan *sd = (struct umwsu_scan *)data;
+  struct umwsu_scan *scan = (struct umwsu_scan *)data;
 
   if (dir_entry->d_type == DT_DIR)
     return;
 
-  g_thread_pool_push(sd->thread_pool, (gpointer)strdup(full_path), NULL);
+  g_thread_pool_push(scan->thread_pool, (gpointer)strdup(full_path), NULL);
 }
 
 static void scan_entry_non_threaded(const char *full_path, const struct dirent *dir_entry, void *data)
 {
-  struct umwsu_scan *sd = (struct umwsu_scan *)data;
+  struct umwsu_scan *scan = (struct umwsu_scan *)data;
 
   if (dir_entry->d_type == DT_DIR)
     return;
 
-  umwsu_scan_file(sd->u, NULL, full_path);
+  umwsu_scan_file(scan, NULL, full_path);
 }
 
-enum umwsu_status umwsu_scan_dir(struct umwsu *u, const char *path, int recurse, int threaded, umwsu_scan_callback_t callback, void **callback_data )
+enum umwsu_status umwsu_scan_run(struct umwsu_scan *scan)
 {
-  struct umwsu_scan *sd;
+  struct stat sb;
 
-  sd = umwsu_scan_new(u, threaded, callback, callback_data);
+  if (stat(scan->path, &sb) == -1) {
+    perror("stat");
+    exit(EXIT_FAILURE);
+  }
 
-  dir_map(path, recurse, (threaded) ? scan_entry_threaded : scan_entry_non_threaded, &sd);
+  if (S_ISREG(sb.st_mode))
+    return umwsu_scan_file(scan, NULL, scan->path);
 
-  umwsu_scan_free(sd);
+  if (S_ISDIR(sb.st_mode)) {
+    int threaded = scan->flags  & UMWSU_SCAN_THREADED;
+    int recurse = scan->flags  & UMWSU_SCAN_RECURSE;
 
-  return UMWSU_CLEAN;
+    dir_map(scan->path, recurse, (threaded) ? scan_entry_threaded : scan_entry_non_threaded, scan);
+
+    return UMWSU_CLEAN;
+  }
+
+  return UMWSU_EINVAL;
+}
+
+void umwsu_scan_free(struct umwsu_scan *scan)
+{
+  free((char *)scan->path);
+
+  if (scan->thread_pool != NULL)
+    g_thread_pool_free(scan->thread_pool, FALSE, TRUE);
+
+  g_array_free(scan->callbacks, TRUE);
+
+  free(scan);
 }
 
